# EmbeddedSoftwareLabor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
.run/: cdma_decoder.run.xml
Laufzeitoptimierung/: Laufzeitoptimierung.cpp  Laufzeitoptimierung.h
cdma_decoder/: cdma_decoder  cdma_decoder.cpp  cdma_decoder.h  cdma_decoder_test.cpp  signal5.txt
performance_tests/: CreateProfilerAnalyseDiagram  UB2_loesung.txt  cdma_decoder_online_perfbench_test_code.cpp  readme.md
